force-app/main/default/objects/ProfileProperties__c/ProfileProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Permet de modifier des paramètres selon le profil (Drag&amp;Drop calendrier etc...)</description>
    <label>Propriétés par profils</label>
</CustomObject>