force-app/main/default/objects/ProfileProperties__c/fields/accesSATContact__c.field-meta.xml
<CustomField>
    <fullName>accesSATContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accès au questionnaire de SATcontact</label>
    <type>Checkbox</type>
</CustomField>