force-app/main/default/objects/ProfileProperties__c/fields/affectationProximite__c.field-meta.xml
<CustomField>
    <fullName>affectationProximite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM : 751 : Affiche ou non le bouton Affectation proximité</description>
    <label>Affectation proximité</label>
    <type>Checkbox</type>
</CustomField>