force-app/main/default/objects/ProfileProperties__c/fields/calendrier_draganddrop__c.field-meta.xml
<CustomField>
    <fullName>calendrier_draganddrop__c</fullName>
    <defaultValue>true</defaultValue>
    <description>CRM-626 : Permet de modifier la date des évènements du calendrier selon le profil</description>
    <label>Calendrier : Drag and Drop</label>
    <type>Checkbox</type>
</CustomField>