force-app/main/default/objects/ProfileProperties__c/fields/deduplicationDesChantiers__c.field-meta.xml
<CustomField>
    <fullName>deduplicationDesChantiers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accès à la fonctionnalité de déduplication des chantiers</description>
    <label>Déduplication des chantiers</label>
    <type>Checkbox</type>
</CustomField>