force-app/main/default/objects/ProfileProperties__c/fields/deduplicationDesComptes__c.field-meta.xml
<CustomField>
    <fullName>deduplicationDesComptes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accès à la fonctionnalité de déduplication des comptes</description>
    <label>Déduplication des comptes</label>
    <type>Checkbox</type>
</CustomField>