force-app/main/default/objects/ProfileProperties__c/fields/default__c.field-meta.xml
<CustomField>
    <fullName>default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ce champ permet de détecter si la condition existe belle et bien pour cet utilisateur/profil. Elle sera égale à FALSE si il s&apos;agit d&apos;une ligne créée. Si par contre la ligne n&apos;existe pas et que la valeur par défaut de l&apos;objet est récupérée, elle sera à TRUE.</description>
    <label>Valeur par défaut (A décocher pour tous)</label>
    <type>Checkbox</type>
</CustomField>