force-app/main/default/objects/ProfileProperties__c/fields/fonctionnaliteDeFusionAutomatique__c.field-meta.xml
<CustomField>
    <fullName>fonctionnaliteDeFusionAutomatique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fonctionnalité de fusion automatique</label>
    <type>Checkbox</type>
</CustomField>