force-app/main/default/objects/ProfileProperties__c/fields/fonctionnaliteDeFusionManuelle__c.field-meta.xml
<CustomField>
    <fullName>fonctionnaliteDeFusionManuelle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fonctionnalité de fusion manuelle</label>
    <type>Checkbox</type>
</CustomField>