force-app/main/default/objects/ProfileProperties__c/fields/reinitialiserMotDePasseClient__c.field-meta.xml
<CustomField>
    <fullName>reinitialiserMotDePasseClient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM : 702 : Affiche ou non le bouton de réinitialisation du mot de passe espace client</description>
    <label>Réinitialiser mot de passe client</label>
    <type>Checkbox</type>
</CustomField>