force-app/main/default/objects/ProfileProperties__c/fields/signea_circuit_acces__c.field-meta.xml
<CustomField>
    <fullName>signea_circuit_acces__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permet de donner l&apos;accès à un profil pour qu&apos;il puisse lancer un circuit via la page Signea</description>
    <label>Signea : Accès à la création de circuit</label>
    <type>Checkbox</type>
</CustomField>