force-app/main/default/objects/ProfileProperties__c/fields/signea_circuit_details_acces__c.field-meta.xml
<CustomField>
    <fullName>signea_circuit_details_acces__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si la case est cochée, le profil pourra accéder au détail des circuits via un lien présent sur la page de signature électronique d&apos;un devis.</description>
    <label>Signea : Accès au détails de circuit</label>
    <type>Checkbox</type>
</CustomField>