force-app/main/default/objects/ProfileProperties__c/fields/signea_circuit_signature_client_acces__c.field-meta.xml
<CustomField>
    <fullName>signea_circuit_signature_client_acces__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Autoriser ou non la possibilité de signer à la place du client en accédant à l&apos;URL de signature</description>
    <label>Signea : Accès signature clients</label>
    <type>Checkbox</type>
</CustomField>