force-app/main/default/objects/ProfileProperties__c/listViews/Autorisations_Signature_Electronique.listView-meta.xml
<ListView>
    <fullName>Autorisations_Signature_Electronique</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>signea_circuit_acces__c</columns>
    <columns>signea_circuit_details_acces__c</columns>
    <columns>signea_circuit_signature_client_acces__c</columns>
    <filterScope>Everything</filterScope>
    <label>Autorisations Signature Electronique</label>
    <language>fr</language>
</ListView>