force-app/main/default/objects/ProfileProperties__c/listViews/autorisationsALaDeduplication.listView-meta.xml
<ListView>
    <fullName>autorisationsALaDeduplication</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>deduplicationDesChantiers__c</columns>
    <columns>deduplicationDesComptes__c</columns>
    <columns>fonctionnaliteDeFusionAutomatique__c</columns>
    <columns>fonctionnaliteDeFusionManuelle__c</columns>
    <filterScope>Everything</filterScope>
    <label>Autorisations à la déduplication</label>
    <language>fr</language>
</ListView>