force-app/main/default/objects/ProfileProperties__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>affectationProximite__c</columns>
    <columns>calendrier_draganddrop__c</columns>
    <columns>signea_circuit_acces__c</columns>
    <columns>signea_circuit_details_acces__c</columns>
    <columns>reinitialiserMotDePasseClient__c</columns>
    <columns>deduplicationDesChantiers__c</columns>
    <columns>deduplicationDesComptes__c</columns>
    <columns>fonctionnaliteDeFusionAutomatique__c</columns>
    <columns>fonctionnaliteDeFusionManuelle__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>